--- a/Assets/AppsFlyer/package.json
+++ b/Assets/AppsFlyer/package.json
@@ -1,11 +1,8 @@
 {
 	"name": "appsflyer-unity-plugin",
 	"displayName": "AppsFlyer",
-	"description": "AppsFlyer Unity Strict plugin mode",
-	"version": "6.3.2",
+	"description": "AppsFlyer Unity plugin",
+	"version": "6.17.3",
 	"unity": "2019.4",
-	"license": "MIT",
-	"dependencies": {
-		"com.google.external-dependency-manager": "1.2.144"
-	}
-}
+	"license": "MIT"
+  }
